  
-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------
 (A) Current branch 
-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------
084-kappa_in_01: if (kappa_in_01) then strange results. Add option no_neg_stock.  

-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------
 (B) Version history (August 2011 - October 2012) reverse chronological order
-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------
epss4
- moving to git versioning system (see section (C) below)

epss3_01b  start 011012 end 031012
- move to 64bit
- move to latest Intel Fortran compiler (Composer XE 2013)
- move to latest Eclipse / Photran (Juno / 8.02)
- move to ETH's Brutus cluster
- replicate old results
- isolate denormal numbers that might create wrong results on local machine
- initialize rpf_med, rpf_kapm (at least for mean shock)
- in laws_of_motion.f90:Regression, change LAPACK function gels to gelsy, because the former seemed to be buggy on Composer XE 2013 / MKL 11.0. Also, gelsy more robust.

epss2_18f2
start  -06-12   ---   end  -06-12
- remove simvars%r_pf_kappa_med everywhere
- clean up run_model_mod:inverted_average_mpk. Where / how should I compute the cases?

epss2_18f
start  12-06-12   ---   end  -06-12
- calculate median portfolio return and returns of median pf

epss2_18e
start  09-06-12   ---   end  11-06-12
- use mean shock code for scale_AR = -1, i.e. the no AR economy
- different calculations of interest rate to be used in no AR economy

epss2_18d
start  09-06-12   ---   end  11-06-12