@@ -199,7 +199,7 @@
 									<listOptionValue builtIn="false" value="&quot;${MKLROOT}/include/intel64/lp64&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${MKLROOT}/include&quot;"/>
 								</option>
-								<option id="intel.linux.fortran.compiler.cmdline.addlopts.1814534990" name="Additional Options" superClass="intel.linux.fortran.compiler.cmdline.addlopts" value="-c -standard-semantics" valueType="string"/>
+								<option id="intel.linux.fortran.compiler.cmdline.addlopts.1814534990" name="Additional Options" superClass="intel.linux.fortran.compiler.cmdline.addlopts" value="-c -standard-semantics -ftrapuv" valueType="string"/>
 								<option id="intel.linux.fortran.compiler.general.optimization.430623088" name="Optimization Level" superClass="intel.linux.fortran.compiler.general.optimization" value="general.opt.none" valueType="enumerated"/>
 								<option id="intel.linux.fortran.compiler.general.debug.24286445" name="Include Debug Information (-g)" superClass="intel.linux.fortran.compiler.general.debug" value="true" valueType="boolean"/>
 								<option id="intel.linux.fortran.compiler.general.warninglevel.1360188853" name="Warning Level" superClass="intel.linux.fortran.compiler.general.warninglevel" value="general.warninglevel.all" valueType="enumerated"/>
