@@ -94,7 +94,7 @@ apmax_curv      1.0         determines spacing over generations of apmax in apgr
 
 ! Tolerances (stopping criteria)
 tol_asset_eul   1e-8        policyfunctions: stopping value for kappa in asset_allocation (also sets tolerance for market clearing in simulations = 10*tol_asset_eul)
-tol_coeffs      1e-5        stopping value for coeffs (normalized to unity)
+tol_coeffs      1e-1        stopping value for coeffs (normalized to unity)
 tol_calib       1e-3        stopping value for sum(abs(endog_moments - data_moments))
 maxstp_ks       0.8         maximum length of Newton step in Krusell Smith algorithm (between 0 and 1, because coeffs normalized to unity)
 maxstp_cal      0.1         maximum length of Newton step in calibration routine (0.2 if IES=0.5, 0.02 if IES=1.5)
